src/style/main.css
@import 'dialog.css';

html {
  /* == Variables == */

  /* Colors */
  --tekhelet: hsla(246, 46%, 37%, 1);
  --medium-slate-blue: hsla(239, 77%, 70%, 1);
  --selective-yellow: hsla(45, 99%, 49%, 1);
  /* --alt-selective-yellow: rgb(255, 221, 119); */
  --selective-yellow: rgb(255, 221, 119);
  --tangerine: hsla(34, 99%, 47%, 1);
  --persimmon: hsla(22, 97%, 48%, 1);

  /* Others */
  --shadow: 2px 1px 0px 0px hsl(0, 0%, 0%, 0.6);
  --general-spacing: 20px;

  /* Box borders */
  --default-border: 2px solid black;
  --default-border-radius: 2px;
  --default-box-shadow: var(--shadow);

  background-color: var(--medium-slate-blue);
}

* {
  /* Reset */
  box-sizing: border-box;

  font-family: 'Red Hat Display', sans-serif;
}

#root {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

main {
  width: 100%;
  max-width: 1000px;

  display: flex;
  justify-content: center;
  flex-direction: column;
}

